// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Split Colors Feature should extract fill and stroke colors separately 1`] = `
{
  "colorMap": Map {
    "#00FF00" => "color",
    "#FF0000" => "color2",
  },
  "colors": [
    "#00FF00",
    "#FF0000",
  ],
  "fillColorMap": Map {
    "#FF0000" => "color2",
  },
  "fillColors": [
    "#FF0000",
  ],
  "gradientColorMap": Map {},
  "gradientColors": [],
  "strokeColorMap": Map {
    "#00FF00" => "color",
  },
  "strokeColors": [
    "#00FF00",
  ],
}
`;

exports[`Split Colors Feature should extract gradient stop colors 1`] = `
{
  "colorMap": Map {
    "#0000FF" => "color",
    "#FF0000" => "color2",
  },
  "colors": [
    "#0000FF",
    "#FF0000",
  ],
  "fillColorMap": Map {},
  "fillColors": [],
  "gradientColorMap": Map {
    "#0000FF" => "color",
    "#FF0000" => "color2",
  },
  "gradientColors": [
    "#0000FF",
    "#FF0000",
  ],
  "strokeColorMap": Map {},
  "strokeColors": [],
}
`;

exports[`Split Colors Feature should handle complex SVG with mixed fill, stroke, and gradient colors 1`] = `
{
  "colorMap": Map {
    "#0000FF" => "color",
    "#00FF00" => "color2",
    "#FF0000" => "color3",
    "#FF00FF" => "color4",
    "#FFFF00" => "color5",
  },
  "colors": [
    "#0000FF",
    "#00FF00",
    "#FF0000",
    "#FF00FF",
    "#FFFF00",
  ],
  "fillColorMap": Map {
    "#0000FF" => "color",
    "#FF0000" => "color3",
  },
  "fillColors": [
    "#0000FF",
    "#FF0000",
  ],
  "gradientColorMap": Map {
    "#FF00FF" => "color4",
    "#FFFF00" => "color5",
  },
  "gradientColors": [
    "#FF00FF",
    "#FFFF00",
  ],
  "strokeColorMap": Map {
    "#00FF00" => "color2",
    "#FF0000" => "color3",
  },
  "strokeColors": [
    "#00FF00",
    "#FF0000",
  ],
}
`;

exports[`Split Colors Feature should handle invalid and special color values 1`] = `
{
  "colorMap": Map {
    "hsl(120, 100%, 50%)" => "color",
    "rgb(255, 0, 0)" => "color2",
  },
  "colors": [
    "hsl(120, 100%, 50%)",
    "rgb(255, 0, 0)",
  ],
  "fillColorMap": Map {
    "rgb(255, 0, 0)" => "color2",
  },
  "fillColors": [
    "rgb(255, 0, 0)",
  ],
  "gradientColorMap": Map {},
  "gradientColors": [],
  "strokeColorMap": Map {
    "hsl(120, 100%, 50%)" => "color",
  },
  "strokeColors": [
    "hsl(120, 100%, 50%)",
  ],
}
`;

exports[`Split Colors Feature should handle same color in fill and stroke separately 1`] = `
{
  "colorMap": Map {
    "#000000" => "color",
  },
  "colors": [
    "#000000",
  ],
  "fillColorMap": Map {
    "#000000" => "color",
  },
  "fillColors": [
    "#000000",
  ],
  "gradientColorMap": Map {},
  "gradientColors": [],
  "strokeColorMap": Map {
    "#000000" => "color",
  },
  "strokeColors": [
    "#000000",
  ],
}
`;

exports[`Split Colors Feature should replace colors with React props 1`] = `"<path fill={color2} className={color2Class} stroke={color} className={colorClass} />"`;

exports[`Split Colors Feature should replace colors with Vue props 1`] = `"<stop :stop-color="color" :class="colorClass" />"`;
